Closed Bug 1321530 Opened 8 years ago Closed 8 years ago

FileReader.abort() should not throw

Categories

(Core :: DOM: Core & HTML, defect)

50 Branch
defect
Not set
normal

Tracking

()

RESOLVED FIXED
mozilla53
Tracking Status
firefox53 --- fixed

People

(Reporter: baku, Assigned: baku)

Details

Attachments

(1 file, 1 obsolete file)

Attached patch wpt3.patch (obsolete) — Splinter Review
      No description provided.
Attachment #8816099 - Flags: review?(bugs)
Attached patch wpt3.patchSplinter Review
Attachment #8816099 - Attachment is obsolete: true
Attachment #8816099 - Flags: review?(bugs)
Attachment #8816100 - Flags: review?(bugs)
Attachment #8816100 - Flags: review?(bugs) → review+
Pushed by amarchesini@mozilla.com:
https://hg.mozilla.org/integration/mozilla-inbound/rev/d277102b35f9
FileReader.abort() should not throw, r=smaug
https://hg.mozilla.org/mozilla-central/rev/d277102b35f9
Status: NEW → RESOLVED
Closed: 8 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla53
Component: DOM → DOM: Core & HTML
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: