Bug 1321530 - FileReader.abort() should not throw, r=smaug